Fixed security issues

--- a/package.json
+++ b/package.json
@@ -7,50 +7,51 @@
   "author": "Igor Kolomiyets",
   "license": "MIT",
   "scripts": {
-    "serve": "webpack-dev-server",
+    "serve": "webpack-dev-server --mode=development",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json",
     "test-watch": "jest --config=jest.config.json --watch"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
-    "node-sass": "^4.7.1",
-    "postcss-loader": "^2.0.8",
-    "precss": "^2.0.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "autoprefixer": "^9.0.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "jest": "^27.1.0",
+    "mini-css-extract-plugin": "^2.2.2",
+    "node-sass": "^6.0.1",
+    "postcss-loader": "^6.1.1",
+    "precss": "^4.0.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
-    "jest": "^21.2.1",
     "moment": "^2.19.2",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^8.0.1",
     "raf": "^3.4.0",
-    "react": "^16.1.1",
+    "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-dates": "^15.1.0",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.1.1",
+    "react-dates": "^21.8.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "react-test-renderer": "^17.0.2",
     "react-with-direction": "^1.1.0",
-    "redux": "^3.7.2",
+    "redux": "^4.1.1",
     "redux-thunk": "^2.2.0",
-    "uuid": "^3.1.0"
+    "tar": "6.1.11",
+    "uuid": "^8.3.2"
   }
 }
