--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
   "presets": [
-    "env",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
-  "plugins": [
-    "transform-class-properties"
-  ]
+  "plugins": []
 }
